--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - dev
     tags: '*'
   pull_request:
 concurrency:
@@ -20,7 +21,7 @@ jobs:
         version:
           - '1.6'
           - '1.7'
-          - 'nightly'
+          # - 'nightly'
         os:
           - ubuntu-latest
           - windows-latest
