--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,17 @@ uuid = "f30e5669-2dcd-44a2-afb8-153dc97fed4c"
 authors = ["JingYu Ning <foldfelis@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
 julia = "1.6"
 
 [extras]
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "NNlib"]
