--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,8 @@ julia = "1.6"
 
 [extras]
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "NNlib"]
+test = ["Test", "NNlib", "Statistics"]
